[package]
name = "rs2n"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
argh = "0.1.12"
libc = "0.2.154"
log = "0.4.21"
pretty_env_logger = "0.5.0"
tokio = { version = "1.37.0", features = ["full"] }
tokio-serial = "5.4.4"
